// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "02b5d35bbdc092",
  "11579ffe1df657",
  "05061d703d2e67",
  "1cac4adc38796d",
  "0bd5714f18016b",
  "0828648eea6c7c",
  "1be1e97716d45a",
  "00c4fbe3fb1ebf",
  "187cfead1e7d99",
  "15c13ccc939d15",
  "0d42b3efd43b61",
  "119a9074ce9922",
  "19713455b3b59f",
  "0e5e8cedf9788d",
  "167997fe3f05f3",
  "0434226ea55064",
  "0208e80ce6e2ac",
  "1b6c090966605c",
  "1f4561912eb198",
  "1d754ce959caed",
  "0913f954a03df2",
  "139795b842f4ef",
  "075552b8509654",
  "1b3e1590b08417",
  "17627475be6de3",
  "09280db555df54",
  "16081f079ebd4d",
  "1bf6146fe3e25a",
  "08652ca17d48ca",
  "12aca7d5f77283",
  "1ef3179ea1c805",
  "140cbd8ab2f281",
  "127f15db722d42",
  "16fd1c8ca3264d",
  "1317eb1b41fc70",
  "0f978cc4072454",
  "06cdbfcc5ca5ec",
  "0fd1a876a679b6",
  "09b21ca2c68621",
  "0ad660b762db0d",
  "11f1c039d7e5ff",
  "18f782ab2825f7",
  "1b950a86192ba4",
  "14f11b9bfff368",
  "0366b68bfb5ef8",
  "15e5e9c3f2d771",
  "0436046957a9f0",
  "06b8eed592a885",
  "0642ff8e61c9b7",
  "129c3ebf094446",
  "186dfe768b964b",
  "057685754a6a94",
  "12a5179602715c",
  "0a8166ef9de333",
  "0e5501cb17b94e",
  "068e19294c8731",
  "07e2fad091d1ea",
  "1cd78d7ef33725",
  "04792aab724ee1",
  "0fbda86f66562e",
  "0748d9ee86d812",
  "07349ed86d5e73",
  "0d38411bc5fdcb",
  "199a39e084b81c",
  "1f09dd30b55261",
  "0434df8563b998",
  "1301339f0563cf",
  "1bf8cfdd12f270",
  "19b84d4b2414c7",
  "0781a16ce6667d",
  "0d9df17b75a093",
  "13053cd8705917",
  "169c332f3c00db",
  "104424253e992e",
  "1039d2acb1dcbb",
  "12dbc6166aceca",
  "064a1201b6047b",
  "0edd890fa6be68",
  "12336f574c8c24",
  "19b1a53e967389",
  "1a16ec3c17b265",
  "01ab8f852dfd1f",
  "194790d3024f00",
  "164a70ccd14c14",
  "073afd2c621564",
  "17ed7728d9970a",
  "154a720b808935",
  "118ba2b2c15688",
  "0c29a3bc26fc89",
  "0089aca7933c92",
  "09620342a1ca8f",
  "1a005dfffdb65a",
  "13d311adf9bf0b",
  "12dbf48ae49bc1",
  "1eb3ce60e2fac6",
  "13d3ab71136f2b",
  "0d7d8eb6ea0429",
  "0f416de580e023",
  "1017c254c9f98e",
  "1db233ba555e11",
  "0e9f6ad5711a42",
  "1e21de17c8f354",
  "104817ac0beaac",
  "0842213c87d881",
  "15274cd88f7bd7",
  "18b0e4686f76d2",
  "0b8a240084f083",
  "1e709729b913dd",
  "03b527533dcb29",
  "0ca0469a72eb88",
  "04d7ec6d811017",
  "0c1ef56649ee4c",
  "01b51e1b3335bd",
  "0bb29a59708f8a",
  "0161cb2c398f09",
  "0240990101c420",
  "0f3aecf08253a3",
  "133cd45015bc92",
  "05dfa0b8427faf",
  "18fd4a54245bed",
  "1c87f92abbc471",
  "19da1d30063990",
  "0c8374f766e086",
  "1f59b4aefd769f",
  "03ec90a9212271",
  "1e887da4224cb4",
  "1765e189912ea7",
  "1e91165a54f9ef",
  "0f6d8350479e9f",
  "1b6bbdf0d830a5",
  "101a9e57186f1f",
  "174b0edd221ab3",
  "10550fd3dc7813",
  "10ca7793e6da07",
  "15d434d4788c36",
  "0511d4a1692a3f",
  "0180c6eaa79b9b",
  "0ef7f0cfd9875d",
  "0fe5ab753420e8",
  "1aef1bc9f159be",
  "0162882243de8b",
  "0249dc93e04195",
  "0fafa981e88f6e",
  "17289c66a62109",
  "0f41d30738589f",
  "1d872163db074d",
  "1e39e019bd6c6f",
  "01e497069910bc",
  "1c78be691b2b32",
  "0efe709191bd99",
  "1aefeddc0bb7ab",
  "18b8e62690031f",
  "122aa7603e105f",
  "1056c90127ce6f",
  "1d2eaf9a3ff23b",
  "0f86733aa5d8bc",
  "0bf945de55fce5",
  "1c824f4f4c5bbe",
  "1ca995a2179ad3",
  "01a01750be60ab",
  "16521fe8e7fcf4",
  "01da755978edb7",
  "02e3ebcb40dcbd",
  "1c693992e04e99",
  "02348699e21132",
  "1c8289a71bf515",
  "046bf9fd1ff126",
  "0394b3176ac297",
  "0490b6668024ce",
  "06ab8f24526c33",
  "09b151b510065a",
  "09e6da16659e9d",
  "069f82602525e9",
  "1c4bdf33fd03f7",
  "1c663fb07a45f9",
  "1402dc283ad975",
  "0244f4217fba47",
  "172a2bb7d30352",
  "1664b25e75d22b",
  "0d046db74ad89a",
  "0d65e67a10ee86",
  "1e43a3e16c54de",
  "1631d44e29be8f",
  "01db39719839a6",
  "067089fb37e038",
  "0526c3e248c604",
  "026ec8e6fd6afa",
  "1c5650aac273b5",
  "05a99542a5d88f",
  "114f36e1a273d3",
  "0120b2dd32442a",
  "13809285940c72",
  "1b17e448088c75",
  "1f99bee46e95b7",
  "08ccbf6b22f07b",
  "165cd03d68a49b",
  "1a72d4e1962cb5",
  "08c6c6e9442522",
  "07c4421ed916b5",
  "0e6cf1126fbf47",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "0d13895fe07237",
  "10cc0207f60151",
  "17cb30bcbeeb22",
  "135ffd3fb2a27a",
  "13a4596cefe1b0",
  "07f75578dc949e",
  "1be1e97716d45a",
  "15e086a63ac0a6",
  "187cfead1e7d99",
  "1c1e6bf58eb246",
  "0618a50e1ad39c",
  "0e899efcee38bd",
  "1332df69289549",
  "0907dbceac2057",
  "075858954c4961",
  "0156debd6e54ee",
  "0208e80ce6e2ac",
  "18a147c5f3cfaa",
  "1f63ca93c21067",
  "13a6091c2d737d",
  "14cbdbde1db520",
  "114fba02bd8094",
  "10ee4961980a49",
  "1ab9128d367901",
  "035288ed905508",
  "18ff3d50d37a60",
  "0b7f12c182b907",
  "08ef24b4cd3784",
  "024a95558baf74",
  "1a1e1a87ba2705",
  "1d4d6e40fb99a2",
  "1345ec3554fe6d",
  "06b8808dcce173",
  "03e726ff9a14e7",
  "14fbc91257c432",
  "0f978cc4072454",
  "11dd472c75bf0a",
  "0a9f7b5203d0bf",
  "0c857c7a9cd2f7",
  "11c8a4b21c7ee8",
  "1b38e08f9f6707",
  "1920056fe2d146",
  "12a6f158aab9b6",
  "15612826cc34e0",
  "1ca65b29f0596e",
  "0b378a8948bccb",
  "0425e3ca2a5744",
  "06b8eed592a885",
  "1d4c4f696e7664",
  "1ba04d5c8902cb",
  "10e83ed37f93ee",
  "057685754a6a94",
  "07c8a025229518",
  "0a8166ef9de333",
  "07d72cec649d08",
  "178fd11d09e4e1",
  "057532993d430c",
  "1cd78d7ef33725",
  "08933b57d4ca6d",
  "0d7105f173c97f",
  "025887f0c53b3c",
  "1d464ff13e4749",
  "134f63b9dde085",
  "199a39e084b81c",
  "12868976c59b07",
  "0434df8563b998",
  "146cf063edf06b",
  "1a26ffa753a155",
  "142649535e0a6c",
  "056327423dfffe",
  "073263aa4c4c15",
  "0beaa54ddcbdd1",
  "0202edb651dcd2",
  "06e543007a53a4",
  "1fa1041d714536",
  "1ed9d0388125cb",
  "070730bb0393b1",
  "1db430c1075f23",
  "0a7f1ddcb48c05",
  "0e66a79844d21c",
  "088c880a96dc5c",
  "01ab8f852dfd1f",
  "1225c47187f367",
  "1f32aca2a154dd",
  "090f16e9eed970",
  "06d10a5edff5db",
  "0754719d28c221",
  "01464e3d91abed",
  "19089702eb961f",
  "003d7c1e948475",
  "1bb420bc39246b",
  "1bcda6eb8c6d49",
  "05a1c3f90d13ae",
  "14b1030dab803f",
  "1da5a355d674a3",
  "0b0c1cd7f52d6e",
  "0bc2adcf0ee6a7",
  "0c6679d123637b",
  "1017c254c9f98e",
  "0c42a5d000f468",
  "16479d6ec77f7e",
  "07c68014695c72",
  "104817ac0beaac",
  "0d9ddc69be97b5",
  "16e0222078e084",
  "1942b670719a8c",
  "13a10c1df06a49",
  "170ca9f6038cf4",
  "03672f62247eab",
  "0bbe0ea2ea009a",
  "077a5011d76191",
  "0c1ef56649ee4c",
  "1fe05ef4dd3971",
  "1cb4744223919d",
  "0985de8e5b908e",
  "1d5a49d9e6d7b6",
  "16f016381d8c7e",
  "09d97e94426568",
  "1ee2d189d52e80",
  "08f1126df556d5",
  "1c87f92abbc471",
  "0b1397ae2d32b9",
  "0c8374f766e086",
  "02ee020dcb665d",
  "1b5f2139528868",
  "04d448fd8a17db",
  "076aae9e9c25cd",
  "00c249bc9d20ba",
  "11433b2467fd27",
  "1b6bbdf0d830a5",
  "1506fec046bb4f",
  "0709ca5caba107",
  "08608e47029a46",
  "0fc2989c320a22",
  "1203c212187b9a",
  "0511d4a1692a3f",
  "0da8f6eeda22ac",
  "1bd597efba303c",
  "1b588f57d4daf1",
  "087c28cc5a6671",
  "0162882243de8b",
  "0a0ed41c32f1c4",
  "0fafa981e88f6e",
  "013e425454dd4c",
  "0d611486dce3f3",
  "10701ef597217a",
  "1e39e019bd6c6f",
  "1884b6fd009a7f",
  "0a80f1a09d8308",
  "03e1a7ec67b6a5",
  "117d10d3a4b08e",
  "07019f6ce38450",
  "0667fb922c3894",
  "1e7ad06e0ecf8b",
  "0ded02598b2ca5",
  "08ff510e082aab",
  "048a115a4595f5",
  "1f27a3c39215f5",
  "0e0da6c9ee556a",
  "1e02292be7e496",
  "00f1d4567981cd",
  "09befc19a8d9d6",
  "075a97af8365e0",
  "0e2ccf25b35e30",
  "02348699e21132",
  "1c377efcf9a1a5",
  "046bf9fd1ff126",
  "03aac2f191168c",
  "0050cb71acace7",
  "0b22519b830dac",
  "09b151b510065a",
  "0b8712fdc90b36",
  "1711b0f9f32950",
  "0acf00d4341ceb",
  "01e6fea3c0cf07",
  "1dd69152affaa6",
  "0797a94bdd37c0",
  "0ce4e87b268d8f",
  "1664b25e75d22b",
  "00ea871339aefb",
  "0964fa43b3ad80",
  "1e43a3e16c54de",
  "1631d44e29be8f",
  "103c9004c9afee",
  "05d925f7d56b0f",
  "150898c71a1a97",
  "10dc4cc3692398",
  "0ef9d0930f6f08",
  "082f4f13363062",
  "1634f578f094e5",
  "19c94adc45f7b1",
  "0925e0285b4b0e",
  "186dc1527db83e",
  "039fce785abd9a",
  "133ca2f9af4b7e",
  "165cd03d68a49b",
  "02faf5f490475a",
  "1ab95e1704869c",
  "006827761e7641",
  "0f9f8d2f1cb9bd",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "02b5d35bbdc092",
  "10cc0207f60151",
  "05061d703d2e67",
  "1cac4adc38796d",
  "0bd5714f18016b",
  "0828648eea6c7c",
  "1be1e97716d45a",
  "00c4fbe3fb1ebf",
  "187cfead1e7d99",
  "1c1e6bf58eb246",
  "0618a50e1ad39c",
  "119a9074ce9922",
  "19713455b3b59f",
  "0e5e8cedf9788d",
  "167997fe3f05f3",
  "0434226ea55064",
  "0208e80ce6e2ac",
  "1b6c090966605c",
  "1f4561912eb198",
  "1d754ce959caed",
  "0913f954a03df2",
  "114fba02bd8094",
  "075552b8509654",
  "1ab9128d367901",
  "17627475be6de3",
  "09280db555df54",
  "16081f079ebd4d",
  "1bf6146fe3e25a",
  "08652ca17d48ca",
  "1a1e1a87ba2705",
  "1ef3179ea1c805",
  "140cbd8ab2f281",
  "127f15db722d42",
  "16fd1c8ca3264d",
  "1317eb1b41fc70",
  "0f978cc4072454",
  "06cdbfcc5ca5ec",
  "0a9f7b5203d0bf",
  "09b21ca2c68621",
  "0ad660b762db0d",
  "11f1c039d7e5ff",
  "18f782ab2825f7",
  "1b950a86192ba4",
  "14f11b9bfff368",
  "1ca65b29f0596e",
  "15e5e9c3f2d771",
  "0436046957a9f0",
  "06b8eed592a885",
  "0642ff8e61c9b7",
  "1ba04d5c8902cb",
  "186dfe768b964b",
  "057685754a6a94",
  "12a5179602715c",
  "0a8166ef9de333",
  "0e5501cb17b94e",
  "068e19294c8731",
  "07e2fad091d1ea",
  "1cd78d7ef33725",
  "04792aab724ee1",
  "0d7105f173c97f",
  "0748d9ee86d812",
  "07349ed86d5e73",
  "0d38411bc5fdcb",
  "199a39e084b81c",
  "1f09dd30b55261",
  "0434df8563b998",
  "1301339f0563cf",
  "1bf8cfdd12f270",
  "142649535e0a6c",
  "0781a16ce6667d",
  "0d9df17b75a093",
  "13053cd8705917",
  "169c332f3c00db",
  "104424253e992e",
  "1039d2acb1dcbb",
  "12dbc6166aceca",
  "064a1201b6047b",
  "0edd890fa6be68",
  "0a7f1ddcb48c05",
  "19b1a53e967389",
  "1a16ec3c17b265",
  "01ab8f852dfd1f",
  "194790d3024f00",
  "164a70ccd14c14",
  "073afd2c621564",
  "17ed7728d9970a",
  "154a720b808935",
  "118ba2b2c15688",
  "0c29a3bc26fc89",
  "0089aca7933c92",
  "09620342a1ca8f",
  "1bcda6eb8c6d49",
  "13d311adf9bf0b",
  "14b1030dab803f",
  "1da5a355d674a3",
  "0b0c1cd7f52d6e",
  "0bc2adcf0ee6a7",
  "0f416de580e023",
  "1017c254c9f98e",
  "1db233ba555e11",
  "0e9f6ad5711a42",
  "1e21de17c8f354",
  "104817ac0beaac",
  "0d9ddc69be97b5",
  "15274cd88f7bd7",
  "1942b670719a8c",
  "0b8a240084f083",
  "1e709729b913dd",
  "03b527533dcb29",
  "0bbe0ea2ea009a",
  "077a5011d76191",
  "0c1ef56649ee4c",
  "1fe05ef4dd3971",
  "0bb29a59708f8a",
  "0161cb2c398f09",
  "0240990101c420",
  "0f3aecf08253a3",
  "09d97e94426568",
  "05dfa0b8427faf",
  "18fd4a54245bed",
  "1c87f92abbc471",
  "19da1d30063990",
  "0c8374f766e086",
  "1f59b4aefd769f",
  "03ec90a9212271",
  "1e887da4224cb4",
  "1765e189912ea7",
  "1e91165a54f9ef",
  "11433b2467fd27",
  "1b6bbdf0d830a5",
  "101a9e57186f1f",
  "174b0edd221ab3",
  "10550fd3dc7813",
  "0fc2989c320a22",
  "15d434d4788c36",
  "0511d4a1692a3f",
  "0180c6eaa79b9b",
  "0ef7f0cfd9875d",
  "1b588f57d4daf1",
  "087c28cc5a6671",
  "0162882243de8b",
  "0249dc93e04195",
  "0fafa981e88f6e",
  "013e425454dd4c",
  "0f41d30738589f",
  "1d872163db074d",
  "1e39e019bd6c6f",
  "01e497069910bc",
  "1c78be691b2b32",
  "0efe709191bd99",
  "1aefeddc0bb7ab",
  "18b8e62690031f",
  "122aa7603e105f",
  "1056c90127ce6f",
  "0ded02598b2ca5",
  "0f86733aa5d8bc",
  "0bf945de55fce5",
  "1f27a3c39215f5",
  "0e0da6c9ee556a",
  "1e02292be7e496",
  "16521fe8e7fcf4",
  "01da755978edb7",
  "075a97af8365e0",
  "1c693992e04e99",
  "02348699e21132",
  "1c8289a71bf515",
  "046bf9fd1ff126",
  "0394b3176ac297",
  "0490b6668024ce",
  "06ab8f24526c33",
  "09b151b510065a",
  "09e6da16659e9d",
  "069f82602525e9",
  "1c4bdf33fd03f7",
  "1c663fb07a45f9",
  "1402dc283ad975",
  "0244f4217fba47",
  "0ce4e87b268d8f",
  "1664b25e75d22b",
  "00ea871339aefb",
  "0d65e67a10ee86",
  "1e43a3e16c54de",
  "1631d44e29be8f",
  "01db39719839a6",
  "067089fb37e038",
  "150898c71a1a97",
  "026ec8e6fd6afa",
  "0ef9d0930f6f08",
  "05a99542a5d88f",
  "114f36e1a273d3",
  "0120b2dd32442a",
  "13809285940c72",
  "1b17e448088c75",
  "1f99bee46e95b7",
  "08ccbf6b22f07b",
  "165cd03d68a49b",
  "1a72d4e1962cb5",
  "08c6c6e9442522",
  "07c4421ed916b5",
  "0e6cf1126fbf47",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "166129d48f621e",
  "1773d8a5de73ce",
  "0b5bb05fb66fe5",
  "1d77a2d44494a5",
  "0925c4b7dc6019",
  "1a4988341b4b75",
  "09bce903c08669",
  "1916fb8cd384a2",
  "17ccf92b6501ae",
  "006f248eafab91",
  "00e7c28e37b7fd",
  "1ae249fe56a51f",
  "1a38fc0aa1d905",
  "125c49bfce7fd7",
  "1508229edd7127",
  "12a4c0aa7ce1a7",
  "0a9ef7c508e3a8",
  "16398191d52502",
  "0cf8e34a550481",
  "0360bd28494c0c",
  "0b75b131575044",
  "10facb05e654db",
  "0ba7837b3ae0ca",
  "1ffb391e965609",
  "0c3203574d9147",
  "049cacbecb3b16",
  "0021793a58bafd",
  "145af73a8b9a83",
  "07a7715c3eff85",
  "1b1f3a90dcf20e",
  "1fea205db04ddd",
  "1fd4a2ab4a25c6",
  "0194c908459c0c",
  "0de0c9a8f28c3f",
  "18a50cbfcd317f",
  "1629b63f71be81",
  "0c48999b57718c",
  "091975ea8d386e",
  "1f4dbf543a3c74",
  "02dc28a9684d07",
  "1552c0c9482101",
  "1ea573c84b37a2",
  "0cfe55806f1212",
  "1f0294a43c24ca",
  "02b6376c394c7f",
  "1b0dd5c5415711",
  "0d675dc90f2d88",
  "1bfe9040d14f91",
  "179133013cdd3b",
  "1eff1ef30842e6",
  "17b697b675cf78",
  "0f544177921760",
  "06f210280487f9",
  "1d2b63b45e8c83",
  "092c0d669e02ae",
  "08255cc7ad636c",
  "05f3a40f3c2ddb",
  "079c4ec8c7b070",
  "14f69acc896dd2",
  "07cd90c4697ba6",
  "0bf36e3d966bb0",
  "002c96be6954d3",
  "0141c9bc73cddb",
  "0e8a0d60444915",
  "1cb1cd626551a5",
  "1f6bcdd9e6400c",
  "078962e22a3df9",
  "16f23c659b7fb3",
  "1bd579c3ab848b",
  "0c838fde59eac6",
  "05bbb11316b70b",
  "04aba296897a06",
  "0bb3ffd86646a8",
  "1864be5474a271",
  "0bed82fd587c25",
  "18343ed446a4a5",
  "1edee0a50b8b53",
  "00423c4fa2df37",
  "0c9f904f706ecd",
  "1ae66bfee9b3fa",
  "12a78d345ba9fa",
  "094ab1bef0f15b",
  "1595587ec8885d",
  "0a04a3659064d5",
  "1e215aacda04ac",
  "0d43078b6d5a6e",
  "1a8f0413abd7f7",
  "058691e20ed91c",
  "0641113c9e40e0",
  "0fe2e07cbf3a35",
  "03fa1d34011c26",
  "1ce67294562bc0",
  "0845c48a8cb693",
  "01a27c38af1765",
  "095168b8b650ba",
  "177bf7af466e58",
  "064fd17c68a67a",
  "126dd5dd239645",
  "1ee42820c91bfb",
  "0ceef63f391459",
  "1404b723eb77b3",
  "13b2abc7f22948",
  "05e76a3a552914",
  "0aeb1bf37b701a",
  "0ee275836bdf69",
  "03d9378f878ef1",
  "1b5fafe0d115f7",
  "13d0c189384c46",
  "1547204216f8ee",
  "170f913340ea3e",
  "04d0a5be928718",
  "16d60dc4eada30",
  "0dd0c0c4caa65e",
  "12d15cd8fb3bd7",
  "0d444df6e87177",
  "0f945c0cc80fcb",
  "053826b08d8ad3",
  "0b95ab4d7df1c4",
  "165244009db713",
  "0dba6bf9ea88dc",
  "04893a305074b6",
  "1a69310288ada4",
  "0da5c984747c54",
  "0bdae3db66bea2",
  "19bae154c530e3",
  "0ea03a2949bf61",
  "0ba4562c25dd92",
  "04e51a7b771d4e",
  "19225502051e30",
  "01156e30ea41a6",
  "1539a075ebf81c",
  "12e167ae38e3af",
  "00d9c48a00ce22",
  "12e665b36dc36a",
  "116f8513d32ec4",
  "03515b2425da5f",
  "16eb29c884ed0e",
  "0059d1c38d8871",
  "034e8797fbbb31",
  "05a8fa4f91eafd",
  "0dc7188dc1b637",
  "1638a33bf808b6",
  "1067fda5e3ca8a",
  "1dd6bec6869e6a",
  "1d8419f981129e",
  "1f572903d5a43c",
  "1bbedf074e65cb",
  "1e155b779a3ac1",
  "05babd6e4a3c3b",
  "199edbb37c8a87",
  "0784ff4b7dde06",
  "01dcde3b6533c5",
  "08622466a08457",
  "11f15c6c322388",
  "09e08cf9998b5e",
  "07b104e07da5fd",
  "0c2f891f143730",
  "0cf132a4f944bd",
  "1426c8583b823b",
  "053811d2b54b20",
  "0c1d317d1d9373",
  "161a0788b7b750",
  "09253273ca04b6",
  "15a292bbc88648",
  "02af691b9fa12c",
  "11c709b8287929",
  "027807b1146420",
  "1669862fcdb5ae",
  "0076b9376884f1",
  "1e2c378f46f663",
  "1973e09f36a1c9",
  "040f50d8e78179",
  "1b8bc9e74bcbc5",
  "13ac038f52ebf2",
  "126e5fddd29345",
  "0ada808cad519b",
  "03f8358962e520",
  "161e79e7ed8c1f",
  "1e734d226d7311",
  "0d6b8d94e631c5",
  "031cc8884ef230",
  "15aad0cb242b2c",
  "16fe2a0ca99d61",
  "17c96ec5050bca",
  "1edfebedcc4e55",
  "0da3b920cbd847",
  "0f964406ef8cc1",
  "04baef7f4dfe45",
  "1bc4ec677b0970",
  "058f17629899dc",
  "19854cfe13548b",
  "0c544e06be0b3b",
  "01aa8c2232aa6b",
  "1e97c125a42594",
  "01bc04fbb666ce",
  "1892da3b8687dc",
  "16967fc092633b",
  "189195841f246c",
  "01d5f368ad7e26",
  "1d0d7c6be3ae1e",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "1d37eb367d89d8",
  "0006968fb25ad5",
  "01afcec3ee0b65",
  "12e8bc120dcedc",
  "0c9a9068787403",
  "157df7c707068e",
  "09bce903c08669",
  "0c68284c6b45a6",
  "17ccf92b6501ae",
  "02b03c7d037028",
  "0a6d597ba8b42d",
  "086e3a4a66efaf",
  "1981a923616e30",
  "0e7b7fe165d6ed",
  "19a50208ba4d1f",
  "1a1c04430d897f",
  "0a9ef7c508e3a8",
  "0ed6bc3226f5de",
  "0b586f2c06389c",
  "18f5485290f33b",
  "13322961b2b73f",
  "00fce4a351ef19",
  "0aa1c145d31f86",
  "0dad7571d117ec",
  "0c61efde2ee1d4",
  "12aa5d978f08df",
  "177f954889d20c",
  "05a8b3eacdf910",
  "1359891e7aaaf0",
  "18cf04c9dcc203",
  "15a33af1b614d8",
  "145ebb93d448e1",
  "1d71db594faeff",
  "0e588bb9e82da7",
  "122616aa0cc982",
  "1629b63f71be81",
  "112c3808e09300",
  "16bd233aca1a29",
  "0492c901893059",
  "0e63f7c2e7185d",
  "09923f14e7b0c3",
  "037bf24e7310ee",
  "1a4d8d7659cb5f",
  "0c6cfafc973001",
  "03a70dd0cabe8b",
  "19ec459b36ee85",
  "085212e1e99d1a",
  "1bfe9040d14f91",
  "02999995994a8a",
  "080ea4a464a02a",
  "0579d6bd3ceb12",
  "0f544177921760",
  "05f720f877cdd9",
  "1d2b63b45e8c83",
  "1df40cb0385ee5",
  "01899853b7049f",
  "048d3d1c0ed176",
  "079c4ec8c7b070",
  "17d8062926318a",
  "0c912595b8e753",
  "0c64b71ec28e03",
  "10b3e9434bb7be",
  "1a0634c4f03710",
  "0e8a0d60444915",
  "00b8f09a0ad7a1",
  "1f6bcdd9e6400c",
  "063ca3b5f8c007",
  "052350f68dada8",
  "0700a9092def55",
  "11b4d2f12179a4",
  "1cf6c6b966dc52",
  "1e1fbd189a4cd4",
  "0f9e5f2e4a172b",
  "1bd370621387e4",
  "07a1c6f33bdf4f",
  "110041406674a8",
  "0ea63e7f00af31",
  "00af205571bc7d",
  "0a3a1e3ef673c1",
  "01aac9334621f4",
  "13387dd9442ef4",
  "094ab1bef0f15b",
  "04eded67988df5",
  "18b5cfd80c84b5",
  "1209a507db10e8",
  "0f9723f4ffb869",
  "1761750e331a19",
  "0f5de24147eca3",
  "0ceb8e11cce969",
  "1b73bea5b729c2",
  "01b2d94a37e9f9",
  "0a44b75a25df6f",
  "0b8923002eb997",
  "02edc29c59e910",
  "0958e51e412eff",
  "0aa83cdacafd07",
  "1ee6d0e276af71",
  "192b76eddb26f5",
  "1ee42820c91bfb",
  "108377df54a7c1",
  "1fe0cbecd04e38",
  "1a658b7e6c4501",
  "05e76a3a552914",
  "11644602fd0814",
  "0a3f15b67de85f",
  "00210616f0d7e6",
  "07bfc8a361ebfb",
  "17c068c96b30eb",
  "18c6bdad3c5715",
  "0701ee3e5e93bd",
  "0587a4b6c7db9f",
  "16d60dc4eada30",
  "056caf763f735f",
  "1d4e914b25587c",
  "0d05c05ecc3a93",
  "1db9c256334015",
  "0e70577936bf3a",
  "18cbd231e80e34",
  "02a305c1e59d25",
  "1604be53fd7518",
  "04893a305074b6",
  "1844e654f879d3",
  "0da5c984747c54",
  "16d0316ec3b1f9",
  "08ef3f040c8666",
  "1c208e2e039a73",
  "125e29ca1f306d",
  "08a7a2273958f4",
  "11568dd931bf06",
  "01156e30ea41a6",
  "0a171fef993da8",
  "1fba1df5be29bd",
  "0a1f9049b6252f",
  "1f7403e5c892af",
  "185011dde58b63",
  "03515b2425da5f",
  "1b2566968715a9",
  "1570761947fc0d",
  "1154c3db0cbe4b",
  "0ea296c546ad08",
  "0dc7188dc1b637",
  "0d57331879bcf0",
  "1067fda5e3ca8a",
  "11c8a2a41b6667",
  "1fc3f346fa83df",
  "05f63396f89551",
  "1bbedf074e65cb",
  "1020f83af60b82",
  "0ec5b5b0e96910",
  "0eb266182ea7e4",
  "0ba0d6109794f0",
  "08acddd79cc390",
  "1b9c08c3888e44",
  "00fc1e1e892d4b",
  "1724560818b8aa",
  "1335b44862a779",
  "0f8858649225da",
  "00b86983b42da1",
  "0d2392c2b283a4",
  "117c75da5d1cdb",
  "0ef57e651915c5",
  "0caa62734df568",
  "0f9a4e579350f1",
  "184596b0d23e07",
  "02af691b9fa12c",
  "0cd34cf1086110",
  "027807b1146420",
  "0faec4bce8ee18",
  "1159a25299d703",
  "0a4bef42bf6eae",
  "1973e09f36a1c9",
  "143976bbb20df4",
  "10012ac767fdc1",
  "1028beb88fcdad",
  "0e17981437abbd",
  "1fb9a621498598",
  "090cfc3c493a89",
  "0d322271c5285e",
  "1e734d226d7311",
  "044b9b688b9d15",
  "05dfc834abbe2c",
  "15aad0cb242b2c",
  "16fe2a0ca99d61",
  "0d19e5e85d0d6b",
  "1dcbe5bb29951e",
  "0f8d363ab7447b",
  "14194b55bafa42",
  "1807eec7143572",
  "0df8d13c637001",
  "19dec0c77c6e8f",
  "1a3907d86836f8",
  "1720cb22c825d3",
  "0e87b3663e07b3",
  "0437b4c98297ed",
  "1bf994ba84b1fe",
  "1892da3b8687dc",
  "046d3db4b9455c",
  "11ebe887c1419a",
  "0cdd6e1e85fd4a",
  "025344d37e91d1",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "166129d48f621e",
  "0006968fb25ad5",
  "0b5bb05fb66fe5",
  "1d77a2d44494a5",
  "0925c4b7dc6019",
  "1a4988341b4b75",
  "09bce903c08669",
  "1916fb8cd384a2",
  "17ccf92b6501ae",
  "02b03c7d037028",
  "0a6d597ba8b42d",
  "1ae249fe56a51f",
  "1a38fc0aa1d905",
  "125c49bfce7fd7",
  "1508229edd7127",
  "12a4c0aa7ce1a7",
  "0a9ef7c508e3a8",
  "16398191d52502",
  "0cf8e34a550481",
  "0360bd28494c0c",
  "0b75b131575044",
  "00fce4a351ef19",
  "0ba7837b3ae0ca",
  "0dad7571d117ec",
  "0c3203574d9147",
  "049cacbecb3b16",
  "0021793a58bafd",
  "145af73a8b9a83",
  "07a7715c3eff85",
  "18cf04c9dcc203",
  "1fea205db04ddd",
  "1fd4a2ab4a25c6",
  "0194c908459c0c",
  "0de0c9a8f28c3f",
  "18a50cbfcd317f",
  "1629b63f71be81",
  "0c48999b57718c",
  "16bd233aca1a29",
  "1f4dbf543a3c74",
  "02dc28a9684d07",
  "1552c0c9482101",
  "1ea573c84b37a2",
  "0cfe55806f1212",
  "1f0294a43c24ca",
  "03a70dd0cabe8b",
  "1b0dd5c5415711",
  "0d675dc90f2d88",
  "1bfe9040d14f91",
  "179133013cdd3b",
  "080ea4a464a02a",
  "17b697b675cf78",
  "0f544177921760",
  "06f210280487f9",
  "1d2b63b45e8c83",
  "092c0d669e02ae",
  "08255cc7ad636c",
  "05f3a40f3c2ddb",
  "079c4ec8c7b070",
  "14f69acc896dd2",
  "0c912595b8e753",
  "0bf36e3d966bb0",
  "002c96be6954d3",
  "0141c9bc73cddb",
  "0e8a0d60444915",
  "1cb1cd626551a5",
  "1f6bcdd9e6400c",
  "078962e22a3df9",
  "16f23c659b7fb3",
  "0700a9092def55",
  "0c838fde59eac6",
  "05bbb11316b70b",
  "04aba296897a06",
  "0bb3ffd86646a8",
  "1864be5474a271",
  "0bed82fd587c25",
  "18343ed446a4a5",
  "1edee0a50b8b53",
  "00423c4fa2df37",
  "0a3a1e3ef673c1",
  "1ae66bfee9b3fa",
  "12a78d345ba9fa",
  "094ab1bef0f15b",
  "1595587ec8885d",
  "0a04a3659064d5",
  "1e215aacda04ac",
  "0d43078b6d5a6e",
  "1a8f0413abd7f7",
  "058691e20ed91c",
  "0641113c9e40e0",
  "0fe2e07cbf3a35",
  "03fa1d34011c26",
  "0a44b75a25df6f",
  "0845c48a8cb693",
  "02edc29c59e910",
  "0958e51e412eff",
  "0aa83cdacafd07",
  "1ee6d0e276af71",
  "126dd5dd239645",
  "1ee42820c91bfb",
  "0ceef63f391459",
  "1404b723eb77b3",
  "13b2abc7f22948",
  "05e76a3a552914",
  "11644602fd0814",
  "0ee275836bdf69",
  "00210616f0d7e6",
  "1b5fafe0d115f7",
  "13d0c189384c46",
  "1547204216f8ee",
  "0701ee3e5e93bd",
  "0587a4b6c7db9f",
  "16d60dc4eada30",
  "056caf763f735f",
  "12d15cd8fb3bd7",
  "0d444df6e87177",
  "0f945c0cc80fcb",
  "053826b08d8ad3",
  "18cbd231e80e34",
  "165244009db713",
  "0dba6bf9ea88dc",
  "04893a305074b6",
  "1a69310288ada4",
  "0da5c984747c54",
  "0bdae3db66bea2",
  "19bae154c530e3",
  "0ea03a2949bf61",
  "0ba4562c25dd92",
  "04e51a7b771d4e",
  "11568dd931bf06",
  "01156e30ea41a6",
  "1539a075ebf81c",
  "12e167ae38e3af",
  "00d9c48a00ce22",
  "1f7403e5c892af",
  "116f8513d32ec4",
  "03515b2425da5f",
  "16eb29c884ed0e",
  "0059d1c38d8871",
  "1154c3db0cbe4b",
  "0ea296c546ad08",
  "0dc7188dc1b637",
  "1638a33bf808b6",
  "1067fda5e3ca8a",
  "11c8a2a41b6667",
  "1d8419f981129e",
  "1f572903d5a43c",
  "1bbedf074e65cb",
  "1e155b779a3ac1",
  "05babd6e4a3c3b",
  "199edbb37c8a87",
  "0784ff4b7dde06",
  "01dcde3b6533c5",
  "08622466a08457",
  "11f15c6c322388",
  "1724560818b8aa",
  "07b104e07da5fd",
  "0c2f891f143730",
  "00b86983b42da1",
  "0d2392c2b283a4",
  "117c75da5d1cdb",
  "0c1d317d1d9373",
  "161a0788b7b750",
  "0f9a4e579350f1",
  "15a292bbc88648",
  "02af691b9fa12c",
  "11c709b8287929",
  "027807b1146420",
  "1669862fcdb5ae",
  "0076b9376884f1",
  "1e2c378f46f663",
  "1973e09f36a1c9",
  "040f50d8e78179",
  "1b8bc9e74bcbc5",
  "13ac038f52ebf2",
  "126e5fddd29345",
  "0ada808cad519b",
  "03f8358962e520",
  "0d322271c5285e",
  "1e734d226d7311",
  "044b9b688b9d15",
  "031cc8884ef230",
  "15aad0cb242b2c",
  "16fe2a0ca99d61",
  "17c96ec5050bca",
  "1edfebedcc4e55",
  "0f8d363ab7447b",
  "0f964406ef8cc1",
  "1807eec7143572",
  "1bc4ec677b0970",
  "058f17629899dc",
  "19854cfe13548b",
  "0c544e06be0b3b",
  "01aa8c2232aa6b",
  "1e97c125a42594",
  "01bc04fbb666ce",
  "1892da3b8687dc",
  "16967fc092633b",
  "189195841f246c",
  "01d5f368ad7e26",
  "1d0d7c6be3ae1e",
]
`;
